--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -7,7 +7,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  margin-top: 5%;
+  margin-top: 3%;
 }
 
 .Home__column1 {
@@ -23,15 +23,25 @@ body {
   text-shadow: 0.5px 1px 0.5px gray;
 }
 
-.Home__column1 p {
-  font-size: 20px;
+.Home__column1__p1 {
+  font-size: 25px;
+}
+
+.Home__column1 span {
+  font-weight: bold;
+ 
+}
+
+.Home__column1__p2 {
+  font-size: 35px;
 }
 
 .Home__column2 {
   color: white;
   background-color: rgb(54, 131, 205);
-  padding: 62px 35px;
+  padding: 80px 50px;
   border-radius: 0% 3% 3% 0% / 2% 5% 5% 0%;
+  width: 450px;
 }
 
 .Home__column2 h3 {
@@ -44,6 +54,8 @@ body {
 
 .Home__column2__Currency {
   margin-top: 30px;
+  display: flex;
+  gap: 10px;
 }
 
 .Home__column2__Currency  label {
@@ -62,6 +74,7 @@ body {
 
 .Home__btn {
   display: flex;
-  gap: 15px;
+  gap: 25px;
   margin-top: 30px;
+  justify-content: center;
 }
