--- a/src/Modals/Modal1/Modal1.css
+++ b/src/Modals/Modal1/Modal1.css
@@ -43,16 +43,16 @@
 }
 
 .modalContentsContainer {
-  padding: 10px 5px 5px;
+  padding: 20px 4px 5px;
   font-size: 14px;
   color: #2c3e50;
 }
 
-.modalContentContainer Label {
+.modalContentsContainer Label {
   font-weight: bold;
 }
 
-.modalContentContainer Input {
+.modalContentsContainer Input {
   border: 1px solid grey;
   border-radius: 5px;
   padding: 15px;
