--- a/src/Modals/Modal3/Modal3.css
+++ b/src/Modals/Modal3/Modal3.css
@@ -43,7 +43,7 @@
 }
 
 .modalContent {
-  padding: 20px 5px;
+  padding: 20px 3px;
   font-size: 14px;
   color: #2c3e50;
 }
@@ -52,7 +52,7 @@
   font-weight: bold;
 }
 
-.modalContentInput {
+.modalContentsInput {
   border: 1px solid grey;
   border-radius: 5px;
   padding: 15px;
@@ -74,7 +74,7 @@
   margin-left: 10px;
 }
 
-.actionsContainer {
+.actionsContainers {
   display: flex;
   justify-content: center;
   align-items: center;
