--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,3 +1,7 @@
+/* * {
+  outline: 1px solid red;
+} */
+
 body {
   background-color: rgb(185, 203, 219);
 }
@@ -6,17 +10,15 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
   margin-top: 3%;
 }
 
 .Home__column1 {
   background-color: white;
-  padding: 50px;
+  padding: 4% 3%;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
 }
 
 .Home__column1 h2 {
@@ -38,9 +40,9 @@ body {
 .Home__column2 {
   color: white;
   background-color: rgb(54, 131, 205);
-  padding: 80px 50px;
+  padding: 5% 3%;
   border-radius: 0% 3% 3% 0% / 2% 5% 5% 0%;
-  width: 450px;
+  width: 35%;
 }
 
 .Home__column2 h3 {
@@ -66,7 +68,8 @@ body {
 .Home__column2__Currency select {
   border: none;
   border-radius: 2px;
-  padding: 5px;
+  padding: 8px;
+  font-size: 15px;
   width: 72%;
   cursor: pointer;
   margin-top: 10px;
@@ -77,4 +80,17 @@ body {
   gap: 25px;
   margin-top: 30px;
   justify-content: center;
+}
+
+@media screen and (max-width: 425px) {
+  .Home__container {
+    flex-direction: column-reverse;
+    margin-top: 0;
+  }
+
+  .Home__column1,
+  .Home__column2 {
+    padding: 5% 3%;
+    width: 100%;
+  }
 }
